# wasmer-rust-example

./: Cargo.toml  run.sh
math-bug/: Cargo.toml
math-bug/res/: math_bug.wasm
math-bug/src/: lib.rs  uint.rs
src/: main.rs  runtime.rs
wasm-sample-app/src/: lib.rs
